--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,40 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.mt2 {
+  margin-top: 2rem;
+}
+
+.cities {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+
+.city.saved label {
+  background-color: #c8e6c9;
+  cursor: default;
+}
+
+.city.saved span {
+  cursor: default;
+}
+
+.city.saved input {
+  cursor: default;
+}
+
+.city label {
+  width: 100wh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  padding: 1rem;
+  background-color: #f3f3f3;
+}
+
+.city input {
+  z-index: 2;
+}
